# SingletonDesignPatternInCPP

./: set_up.sh
singleton/: CMakeLists.txt  main.cpp
singleton/include/basic_singleton/: basic_singleton.h
